--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,10 @@ li{ list-style:none;}
 body{background:#fff;}
 .layout{width:1200px; margin:0 auto;   }
 img{border:0} 
-.part03 .layout{margin-top: 30px;}
+.part03 .layout{
+    margin-top: 30px;
+    position: relative;
+    padding-left: 60px;}
 .banner{position:relative;margin-top: 100px;height:600px;min-width: 1300px}
 .banner_flex{width:100%;position:relative;z-index:8;}
 .banner_flex .slides{width:100%;}
@@ -71,7 +74,7 @@ img{border:0}
 .flex-prev{display:none;position:absolute;height:200px;width:200px;background:url(../images/flex_prev.png) no-repeat;left:0;top:338px;font-size:0px;}
 .flex-next{display:none;position:absolute;height:200px;width:200px;background:url(../images/flex_next.png) no-repeat;right:0;top:338px;font-size:0px;}
 .search{ position:absolute;width:1200px;bottom:110px;left:50%;margin-left:-600px;height:124px;background:url(../images/input_bg.png) repeat; border-radius:4px;z-index:9;font-size:36px;color:#999;overflow:hidden;}
-.search input{border:none;display:inline-block;zoom:1;*display:inline;height:124px;line-height:124px;font-size:36px;}
+.search input{border:none;display:inline-block;zoom:1;*display:inline;height:124px;line-height:124px;font-size:36px;z-index: 9999}
 .search input.iphone{width:270px;text-align:center;color:#999;}
 .search input.text{padding-left:40px;color:#df3d3e;}
 
@@ -91,10 +94,16 @@ img{border:0}
 .slidesInner{    width: 1200px; height: 300px;position: absolute;top: 50%;left: 50%;margin-left: -961px;padding-left: 80px;margin-top: -170px;}
 .slidesInner p:nth-of-type(1){font-size: 74px;color:#222;}
 .slidesInner p:nth-of-type(2){font-size: 48px;color:#999895;}
-
+.title_line{    width: 68px;
+    height: 2px;
+    display: inline-block;
+    background: #009944;
+    margin: 10px;
+    position: relative;
+    top: -3px;}
 .title{text-align:center;font-size:48px;color:#222;padding:20px 0;}
 .title span{color:#a3c82e;}
-.title p{font-size:24px;color:#999;line-height:30px;margin-top: 10px;}
+.title p{font-size:14px;color:#999;line-height:30px;margin-top: 0px;}
 .title p span{color:#df3d3e;}
 .title>img{vertical-align:bottom;margin-right:-50px;margin-left: -50px;}
 .part01_img{width:100%;background:#ededed; height:750px;margin-top: 25px;}
@@ -107,6 +116,7 @@ img{border:0}
 .part01_img>div>font:nth-of-type(5){ top: 532px;right: 497px;}
 .part01_img>div>img{height: 750px;position: absolute;left: -217px;top:0;}
 .part01_img>div>div>img{width: 620px;height: 598px;position: absolute;right: 32px;top:91px;}
+.cloudImg{position: absolute;    height: 70px!important;left: -217px!important;top: 0!important;}
 .part02_con{background:#92be26;height:245px;margin-top:84px;}
 .part02_con .part02_img{position:relative;border:18px solid #fff;margin-right:34px;width:358px;float:left;margin-top:-84px;overflow:hidden;}
 .part02_con .part02_img .pro{width:358px;height:374px;}
@@ -123,7 +133,7 @@ img{border:0}
 .part02_w div img{width: 100%;}
 .part02_w div div{font-size: 24px;color: #222;margin-top: 20px;text-align: center;width: 100%;}
 .part03{margin-top:25px;}
-.part03_div{width:300px;float:left;padding:40px 0 20px;height: 265px;}
+.part03_div{width:266px;float:left;padding:40px 0 20px;height: 265px;}
 .part03_div h2{font-size:30px;color:#fff;text-align:center;}
 .part03_div .t{text-align:center;font-size:18px;color:#fff;margin-top:12px;padding-left: 25px;padding-right: 25px;}
 
@@ -135,7 +145,21 @@ img{border:0}
 .part03_div .more{text-align:center;margin-top:16px;}
 .part03_div a{display:inline-block;zoom:1;*display:inline;padding:0 60px;color:#fff;border:1px solid #fff;line-height:46px; font-size:20px}
 .part03_div.bg3{background:url(../images/jm_bg2.jpg) no-repeat center;}
-
+.part03_div.bg2.bg2_2{background:url(../images/bg_inner.png_2.png) center center;background-size: cover;}
+.part03_div.bg2.bg2_3{background:url(../images/bg_inner.png_3.png) center center;background-size: cover;}
+.part03_div.bg2.bg2_4{background:url(../images/bg_inner.png_4.png) center center;background-size: cover;}
+.part03_div.bg2.bg2_5{background:url(../images/bg_inner.png_5.png) center center;background-size: cover;}
+.part03_div.bg2.bg2_6{background:url(../images/bg_inner.png_6.png) center center;background-size: cover;}
+.c_1{        width: 187px;
+    position: absolute;
+    left: -113px;
+    bottom: 92px;
+    z-index: -1;}
+.c_2{    width: 187px;
+    position: absolute;
+    right: -106px;
+    bottom: 92px;
+    z-index: -1;}
 .part04{padding-bottom:60px;position:relative;}
 .part04_con .pro{display:block;margin:20px auto;}
 .part04_list{width:1256px;position:relative; z-index:8;margin-top: 50px;}
@@ -152,15 +176,26 @@ img{border:0}
 .part04 .part04_list_div:nth-of-type(2) .icon{background:url(../images/pic_1.jpg) center center no-repeat;background-size: cover;}
 .part04 .part04_list_div:nth-of-type(3) .icon{background:url(../images/pic_2.jpg) center center no-repeat;background-size: cover;}
 .part04 .part04_list_div:nth-of-type(4) .icon{background:url(../images/pic_3.jpg) center center no-repeat;background-size: cover;}
-.part05{width:100%;margin-top:30px;background:url(../images/banner_3.png) no-repeat center 0;padding:55px 0;}
+.part05{width:100%;margin-top:50px;background:url(../images/banner_3.png) no-repeat center 0;padding:55px 0;}
 .part05 h2{text-align:center;color:#a3c82e;font-size:48px;font-weight:normal;}
 .part05 h3{text-align:center;color:#fff;font-size:24px;font-weight:normal;}
 .part05 h3 span{color:#a3c82e;}
 .part05_in1,.part05_in2,.part05_in3{text-align:center;margin-top:36px;}
 .part05_in1 input{border:1px solid rgba(255,255,255,0.8);color:#fff;font-size:24px;line-height:86px;display:inline-block;zoom:1;*display:inline;background:none;text-align:center;margin:0 10px;}
 .part05_in2 input{border:none;color:#fff;font-size:24px;line-height:86px;display:inline-block;zoom:1;*display:inline;background:none;text-align:center;margin:0 10px;width: 610px;border: 1px solid rgba(255,255,255,0.8);}
-.part05_in3 a{border:none;color:#fff;font-size:24px;line-height:86px;display:inline-block;zoom:1;*display:inline;background:#a3c82e;text-align:center;padding:0 230px;    border-radius: 50px}
-
+.part05_in3 a{
+    border: none;
+    color: #000000;
+    font-size: 26px;
+    line-height: 86px;
+    display: inline-block;
+    zoom: 1;
+    *display: inline;
+    background: rgba(205,255,50,1);
+    text-align: center;
+    padding: 0 180px;
+    border-radius: 50px;
+}
 .part06_l{width:500px;float:left;}
 .part06 img{margin-top:30px;}
 .part06_r{width:669px;float:right;}
@@ -178,28 +213,25 @@ img{border:0}
     cursor: pointer;
     text-shadow: 0 0.05rem rgba(0,0,0,.8), 0 0.3rem 0.4rem rgba(0,0,0,.2), 0 -0.2rem 0.4rem rgba(255,255,255,.2);}
 .part06_c{float:left;width:500px;margin-left:30px;text-align:center;}
-.part06_c .t{background-color:#a3c82e;line-height:90px; 
+.part06_c .t{line-height:92px; 
  *zoom: 1;
-    filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0,startColorstr='#FF000000',endColorstr='#FF000000');
-    background-image: -webkit-gradient(linear,50% 0%,50% 100%,color-stop(0%,transparent),color-stop(100%,rgba(0,0,0,0.3)));
-    background-image: -webkit-linear-gradient(top,transparent 0%,rgba(0,0,0,0.3) 100%);
-    background-image: -moz-linear-gradient(top,transparent 0%,rgba(0,0,0,0.3) 100%);
-    background-image: -o-linear-gradient(top,transparent 0%,rgba(0,0,0,0.3) 100%);
-    background-image: linear-gradient(to bottom,rgba(0,0,0,0) 0%,rgba(0,0,0,0.3) 100%);
-    box-shadow: inset 0 0.3rem 0.2rem rgba(255,255,255,.2), inset 0 -0.3rem 0.2rem rgba(0,0,0,.2), 0 0.2rem 0.4rem rgba(0,0,0,.2);
+    
     color: #fff;
     cursor: pointer;
-    text-shadow: 0 0.05rem rgba(0,0,0,.8), 0 0.3rem 0.4rem rgba(0,0,0,.2), 0 -0.2rem 0.4rem rgba(255,255,255,.2);}
+    }
 .part06_c a{display:block;color:#fff;font-size:30px;}
 .part06_inner{width: 1200px;margin:0 auto;position: relative;}
 .part06_inner .ic{margin:0 auto; display: block;}
-.part06_t>p>img{margin-top: 18px;margin-right: 10px;}
+.part06_t>p>img{margin-top: 10px;margin-right: 10px;}
 .btImg{margin-top: 18px;margin-right: 10px;}
 .lb{position: absolute;top:300px;left:50px;}
 .rb{position: absolute;top:300px;right:50px;}
 .part07_c{width:350px;}
 .part07_c .img{position:relative;}
-.part07_c img{width:350px;height:450px;border-top-left-radius:60px;border-top-right-radius:40px;}
+.part07_c .img_{display:inline-block;width:350px;height:450px;border-top-left-radius:60px;border-top-right-radius:40px;}
+.part07_c:nth-of-type(1) .img_{background-size: 100% 100%;background:url("../images/banner_10.jpg") center center no-repeat;}
+.part07_c:nth-of-type(2) .img_{background-size: cover;background:url("../images/banner_11.jpg") center center no-repeat;}
+.part07_c:nth-of-type(3) .img_{background-size: cover;background:url("../images/banner_12.jpg") center center no-repeat;}
 .part07_c .t{background-color:rgba(255,255,255,0.8);font-size:36px;color:#222;position:absolute;left:0;bottom:0;width:350px;text-align:center;line-height:150px;}
 .part07_c.mar01{margin-left:80px;}
 .part07 .bg{;position:absolute;top:0;left:50%;margin-left:-600px;}
@@ -236,7 +268,7 @@ img{border:0}
 .partmapInnerTip:nth-of-type(6){position: absolute;           bottom: -141px;
     right: 256px;
 }
-.partmapInnerTip:nth-of-type(5){position: absolute;         bottom: -19px;
+.partmapInnerTip:nth-of-type(5){position: absolute;         bottom: -12px;
     right: -102px;}
 .partmapInnerTip:nth-of-type(4){position: absolute;    top: 570px;
     right: -91px;}
@@ -377,15 +409,66 @@ img{border:0}
     opacity: 1;
     background: #a3c82e!important;
 }
-.part01{min-width: 1300px;}
-.part02{min-width: 1300px;}
-.part03{min-width: 1300px;}
-.part04{min-width: 1300px;}
-.part05{min-width: 1300px;}
-.part06{min-width: 1300px;}
-.part07{min-width: 1300px;}
+.part01{min-width: 1300px;padding-top: 30px;}
+.part02{min-width: 1300px;padding-top: 30px;}
+.part03{min-width: 1300px;padding-top: 30px;}
+.part04{min-width: 1300px;padding-top: 30px;}
+.part05{min-width: 1300px;padding-top: 40px;}
+.part06{min-width: 1300px;padding-top: 30px;}
+.part07{min-width: 1300px;padding-top: 30px;}
 .part08{min-width: 1300px;overflow: hidden;}
-.part09{min-width: 1300px;}
-.part10{min-width: 1300px;}
-.bottom{min-width: 1300px;}
+.part09{min-width: 1300px;padding-top: 30px;}
+.part10{min-width: 1300px;padding-top: 42px;}
+.bottom{min-width: 1300px;padding-top: 30px;}
 /*html,body{width: 100%;height: 100%;}*/
+.search ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #df3d3e;
+}
+.search :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #df3d3e;
+}
+.search ::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #df3d3e;
+}
+.search :-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #df3d3e;
+}
+
+.part05 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #ffffff;
+}
+.part05 :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #ffffff;
+}
+.part05 ::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #ffffff;
+}
+.part05 :-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #ffffff;
+}
+.figImg{
+        width: 43px;
+    position: relative;
+    top: 10px;
+    left: -30px;
+}
+.l.part06_t{
+    background: url(../images/btn_2.png) no-repeat center center;
+    background-size: 100% 100%;
+    font-size: 22px;
+    color: rgba(0,0,0,0.1);
+    padding: 58px 0;
+}
+.r.part06_t{
+    background: url(../images/btn_2.png) no-repeat center center;
+    background-size: 100% 100%;
+    font-size: 22px;
+    color: rgba(0,0,0,0.1);
+    padding: 58px 0;
+}
+.part06_c a{
+    background: url(../images/btn_3.png) no-repeat center center;
+    background-size: 100% 100%;
+    font-size: 22px;
+    color: rgba(0,0,0,1);
+}
