--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ img{border:0}
 .part07_c{width:350px;}
 .part07_c .img{position:relative;}
 .part07_c .img_{display:inline-block;width:350px;height:450px;border-top-left-radius:60px;border-top-right-radius:40px;}
-.part07_c:nth-of-type(1) .img_{background-size: 100% 100%;background:url("../images/banner_10.jpg") center center no-repeat;}
+.part07_c:nth-of-type(1) .img_{background:url("../images/banner_10.jpg") center center no-repeat;background-size: cover;}
 .part07_c:nth-of-type(2) .img_{background-size: cover;background:url("../images/banner_11.jpg") center center no-repeat;}
 .part07_c:nth-of-type(3) .img_{background-size: cover;background:url("../images/banner_12.jpg") center center no-repeat;}
 .part07_c .t{background-color:rgba(255,255,255,0.8);font-size:36px;color:#222;position:absolute;left:0;bottom:0;width:350px;text-align:center;line-height:150px;}
@@ -277,9 +277,9 @@ img{border:0}
 .partmapInnerTip:nth-of-type(1){    position: absolute;     top: 222px;left: 518px;;}
 .partMapInnerTipDiv{padding-left: 20px;}
 .pic_1{width: 1200px;margin:0 auto;margin-top: 50px;margin-bottom: 30px;}
-.pic_1 div:nth-of-type(1){width: 900px;margin: 0 auto;overflow: hidden;}
+.pic_1 div:nth-of-type(1){width: 920px;margin: 0 auto;overflow: hidden;}
 .pic_1 div:nth-of-type(1) img:nth-of-type(1){width: 300px;float: left;position: relative;top: 84px;}
-.pic_1 div:nth-of-type(1) img:nth-of-type(2){width: 300px;float: left;}
+.pic_1 div:nth-of-type(1) img:nth-of-type(2){width: 300px;float: left;margin-left: 10px;margin-right: 10px;}
 .pic_1 div:nth-of-type(1) img:nth-of-type(3){width: 300px;float: left;position: relative;top: 84px;}
 .pic_1 div:nth-of-type(2){width: 1200px;margin: 0 auto;overflow: hidden;margin-top: 30px;}
 .pic_1 div:nth-of-type(2) img:nth-of-type(1){vertical-align: bottom;height: 220px;}
@@ -471,4 +471,16 @@ img{border:0}
     background-size: 100% 100%;
     font-size: 22px;
     color: rgba(0,0,0,1);
+}
+.submitBtn{
+    width: 200px;
+    text-align: center;
+    line-height: 124px;
+    height: 124px;
+    color: #fff;
+    background:#a3c82e;
+    position: absolute;
+    right: 0;
+    top:0;
+    cursor: pointer;
 }
